# PySide-5.11-Bug

./: BugExample.h  BugExample.txt.in  BugExample.xml  CMakeLists.txt
api/include/api/: BugExample.h
api/src/: BugExample.cpp
